# aisc-backend

./: .dockerignore  .env  .gitignore  AISC CCLA (Entities).txt  AISC ICLA (Individuals).txt  AISC README.md  CONTRIBUTING.md  CONTRIBUTORS.md  Caddyfile  DOCUMENTATION NOTICE.txt  Dockerfile  GOVERNANCE.md  README.md  docker-compose-infra.development.yml  docker-compose-infra.staging.yml  docker-compose-infra.yml  docker-compose.demo.nbg.yml  docker-compose.dev.yml  docker-compose.development.yml  docker-compose.staging.yml  docker-compose.yml  env.development  env.staging  env.yulin  pyproject.toml  yu-lin-compose.yml
.github/workflows/: build_and_push.yaml  build_and_push_main.yml  build_and_push_tags.yml
a4s_backend/: adapters.py  admin.py  apps.py  auth.py
a4s_backend/migrations/: 0001_initial.py  0002_alter_measurement_error_and_more.py  0002_evaluationplugin_evaluation_config.py  0003_add_user_to_evaluation.py  0003_remove_evaluationplugin_evaluation_config_and_more.py  0004_remove_dataset_plugin_remove_evaluation_dataset_and_more.py  0005_artifact.py
a4s_backend/models/: __init__.py  common.py  configuration.py  dataset.py  datashape.py  evaluation.py  feature.py  measure.py  metric.py  model.py  observation.py  plugin.py  project.py
a4s_backend/repositories/: base_repository.py  dataset_repository.py  datashape_repository.py  evaluation_repository.py  file_repository.py  measurement_repository.py  project_repository.py
a4s_backend/routers/: app.py  audit.py  auth.py  dataset.py  datashape.py  evaluation.py  file.py  model.py  models.py  plugin.py  project.py  task.py
a4s_backend/schemas/: artifact.py  audit.py  common.py  dataset.py  datashape.py  evaluation.py  feature.py  measure.py  model.py  plugin.py  project.py
a4s_backend/services/: a4s_eval.py  audit_service.py  celery_service.py
a4s_backend/tests/: test_audit_service.py  test_project.py  test_sample.py  utils.py
a4s_backend/utils/: api.py  exception_handlers.py  exceptions.py  file_utils.py  log_util.py  logging_ninja_api.py
aisc_backend/: admin.py  apps.py
aisc_backend/audit/: EVENTS.md  clerk.py  log.py
aisc_backend/auth/: keycloak.py
aisc_backend/migrations/: 0001_initial.py  0002_evaluationplugin_evaluation_config.py  0003_remove_evaluationplugin_evaluation_config_and_more.py  0004_remove_dataset_plugin_remove_evaluation_dataset_and_more.py  0005_artifact.py  0006_plugin_package_name_plugin_version_and_more.py  0007_alter_plugin_unique_together_plugin_display_name.py  0008_remove_datashape_dataset_and_more.py  0009_alter_measurement_dimensions.py  0010_plugin_enabled.py  (+2 more)
config/: jwt.py  settings.py  urls.py
docs/: development-guide.md
keycloak/: realm-export.json
my_application/: apps.py
projects/: admin.py  api.py  models.py
tasks/: minio_add_bucket.sh
vera_backend/: admin.py  apps.py
vera_backend/plugin/interface/: PLUGIN_DEVELOPER_GUIDE.md  README.md  pyproject.toml
vera_backend/plugin/interface/src/a4s_plugin_interface/: __init__.py  base_evaluation_plugin.py  cli.py
vera_backend/plugin/interface/src/a4s_plugin_interface/decorators/: evaluation_input.py
vera_backend/plugin/interface/src/a4s_plugin_interface/models/: measure.py
vera_backend/plugin/interface/src/a4s_plugin_interface/templates/: plugin.py.tpl
(+134 files in other folders)
