[project]
name = "a4s-backend"
version = "0.1.0"
description = "Backend for A4S"
authors = [
    { name = "Thibault Simonetto", email = "thibault.simonetto@uni.lu" },
    { name = "Maxime Cordy", email = "maxime.cordy@uni.lu" },
    { name = "Sean Blevins", email = "sean.blevins@uni.lu" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.64",
    "django>=5.2.7",
    "django-allauth[headless-spec]>=65.13.0",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.4.5",
    "django-ninja-jwt>=5.4.0",
    "environs>=14.5.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "uvicorn>=0.38.0",
    "whitenoise>=6.11.0",
]
