[project]
name = "vera-backend"
version = "0.2.2"
description = "Backend for VERA"
authors = [
    { name = "Thibault Simonetto", email = "thibault.simonetto@uni.lu" },
    { name = "Maxime Cordy", email = "maxime.cordy@uni.lu" },
    { name = "Sean Blevins", email = "sean.blevins@uni.lu" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.42.7",
    "celery[redis]>=5.6.0",
    "django>=5.2.7",
    "django-allauth[headless-spec]>=65.13.0",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.4.5",
    "django-ninja-jwt>=5.4.0",
    "environs>=14.5.0",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.2.12",
    "pyarrow>=22.0.0",
    "uvicorn>=0.38.0",
    "whitenoise>=6.11.0",
    "jsonschema>=4.25.1",
    "vera-plugin-manager>=0.2.2",
    "vera-plugin-interface>=0.2.2"
]

[tool.uv.sources]
vera-plugin-manager = { git = "https://github.com/lux-ai-factory/vera-plugin-manager", tag = "v0.2.2" }
